--- a/src/PhotoFolder.Wpf/Views/DecisionManagerListView.xaml
+++ b/src/PhotoFolder.Wpf/Views/DecisionManagerListView.xaml
@@ -2,10 +2,10 @@
     x:Class="PhotoFolder.Wpf.Views.DecisionManagerListView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:converters="clr-namespace:PhotoFolder.Wpf.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:decision="clr-namespace:PhotoFolder.Wpf.Views.Decision"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:modelConverter="clr-namespace:PhotoFolder.Wpf.Converter.Models"
     xmlns:models="clr-namespace:PhotoFolder.Wpf.ViewModels.Models"
     xmlns:mvvm="http://prismlibrary.com/"
     xmlns:viewModels="clr-namespace:PhotoFolder.Wpf.ViewModels"
@@ -15,7 +15,8 @@
     mvvm:ViewModelLocator.AutoWireViewModel="True"
     mc:Ignorable="d">
     <UserControl.Resources>
-        <converters:DecisionIssueDescriptionConverter x:Key="DecisionIssueDescriptionConverter" />
+        <modelConverter:DecisionIssueDescriptionConverter x:Key="DecisionIssueDescriptionConverter" />
+        <modelConverter:GetFileInformationPathConverter x:Key="GetFileInformationPathConverter" />
     </UserControl.Resources>
     <DataGrid
         AutoGenerateColumns="False"
@@ -57,6 +58,9 @@
                                     <DataTemplate DataType="{x:Type models:SimilarFileDecisionViewModel}">
                                         <ContentControl Content="{StaticResource ImageGroupIcon}" />
                                     </DataTemplate>
+                                    <DataTemplate DataType="{x:Type models:FormerlyDeletedFileDecisionViewModel}">
+                                        <ContentControl Content="{StaticResource HistoryIcon}" />
+                                    </DataTemplate>
                                 </ContentControl.Resources>
                             </ContentControl>
                             <TextBlock Margin="5,0,0,0" Text="{Binding Decision, Converter={StaticResource DecisionIssueDescriptionConverter}}" />
@@ -66,7 +70,7 @@
             </DataGridTemplateColumn>
             <DataGridTextColumn
                 Width="*"
-                Binding="{Binding Decision.Issue.File.Filename}"
+                Binding="{Binding Decision.Issue.File, Converter={StaticResource GetFileInformationPathConverter}}"
                 Header="Path"
                 IsReadOnly="True">
                 <DataGridTextColumn.CellStyle>
