--- a/src/PhotoFolder.Wpf/Views/DecisionManagerDialog.xaml
+++ b/src/PhotoFolder.Wpf/Views/DecisionManagerDialog.xaml
@@ -2,7 +2,6 @@
     x:Class="PhotoFolder.Wpf.Views.DecisionManagerDialog"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:converter="clr-namespace:PhotoFolder.Wpf.Converter"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
@@ -22,30 +21,35 @@
         </Style>
     </prism:Dialog.WindowStyle>
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="2*" />
+            <ColumnDefinition Width="1" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <ContentControl prism:RegionManager.RegionContext="{Binding Context}" prism:RegionManager.RegionName="{x:Static wpf:RegionNames.DecisionManagerMenu}" />
-        <Grid Grid.Row="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="2*" />
-                <ColumnDefinition Width="1" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-            <ContentControl prism:RegionManager.RegionContext="{Binding Context}" prism:RegionManager.RegionName="{x:Static wpf:RegionNames.DecisionManagerList}" />
-            <GridSplitter
-                Grid.Column="1"
-                Margin="-2,0"
-                HorizontalAlignment="Stretch"
-                Background="{StaticResource MahApps.Brushes.Gray7}"
-                BorderBrush="Transparent"
-                BorderThickness="2,0"
-                Foreground="{StaticResource MahApps.Brushes.Black}" />
-            <ContentControl
-                Grid.Column="2"
-                prism:RegionManager.RegionContext="{Binding Context}"
-                prism:RegionManager.RegionName="{x:Static wpf:RegionNames.DecisionManagerSelectionDetails}" />
-        </Grid>
+        <ContentControl
+            Grid.Row="1"
+            Grid.Column="0"
+            prism:RegionManager.RegionContext="{Binding Context}"
+            prism:RegionManager.RegionName="{x:Static wpf:RegionNames.DecisionManagerList}" />
+        <GridSplitter
+            Grid.Row="0"
+            Grid.RowSpan="2"
+            Grid.Column="1"
+            Margin="-2,0"
+            HorizontalAlignment="Stretch"
+            Background="{StaticResource MahApps.Brushes.Gray7}"
+            BorderBrush="Transparent"
+            BorderThickness="2,0"
+            Foreground="{StaticResource MahApps.Brushes.Black}" />
+        <ContentControl
+            Grid.Row="1"
+            Grid.Column="2"
+            prism:RegionManager.RegionContext="{Binding Context}"
+            prism:RegionManager.RegionName="{x:Static wpf:RegionNames.DecisionManagerSelectionDetails}" />
     </Grid>
 </UserControl>
